syntax = "proto3";

package com.example.internalapi.request.book.get_all.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/book.proto";

message GetAllBooksRequest {

}

message GetAllBooksResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.BookList books = 1;
  }
}
